[package]
name = "ddb_util"
version = "0.1.0"
authors = ["Steen Larsen <sla@keycore.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
serde_dynamodb = "0.6.0"
log = "^0.4"
simple_logger = "1.6.0"
#openssl = { version = "^0.10", features = ["vendored"] }
rusoto_core = {version = "^0.45.0", default_features = false, features=["rustls"]}
rusoto_dynamodb = {version = "^0.45.0", default_features = false, features=["serialize_structs", "deserialize_structs", "rustls"]}
tokio = { version = "0.2", features = ["full"] }
itertools = "0.9.0"
