[package]
name = "ddb_util"
version = "0.1.0"
authors = ["Steen Larsen <sla@keycore.dk>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1"
serde_json = "^1"
serde_derive = "^1"
serde_dynamodb = "0.9.0"
log = "^0.4"
simple_logger = "1.6.0"
#openssl = { version = "^0.10", features = ["vendored"] }
rusoto_core = {version = "0.47.0", default_features = false, features=["rustls"]}
rusoto_dynamodb = {version = "0.47.0", default_features = false, features=["rustls"]} # features=["serialize_structs", "deserialize_structs"]}
tokio = { version = "1.12.0", features = ["full"] }
itertools = "0.10.1"
